Bug 1066726 - Concurrent HTTP cache read and write issues. r=michal, r=jduell, a=sledru